exports[`markdownlint-cli2-test-exec.mjs > config-file-unrecognized-arg (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.cjs-absolute-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.cjs-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.jsonc-absolute-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.jsonc-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.mjs-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.yaml-absolute-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.yaml-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.cjs-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.json-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.json-redundant-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: *.md",
    "Linting: 1 file(s)",
    "Summary: 4 error(s)"
  ],
  "stderr": [
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.mjs-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.toml-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.yml-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.yml-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config-nested-nested.json-/missing-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config-nested.json-/nested/extra-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config-nested.json-/number-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config.mjs-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 3 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-invalid.markdownlint-cli2.yaml-invalid-arg (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-options-nested-nested.yaml-/outer/inner/extra-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-options-nested.yaml-/string-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-options.jsonc-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 3 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-options.yaml-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 3 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-with-fix-arg (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md info.md",
    "Linting: 2 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > customRules-invalid (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: .*",
    "Linting: 1 file(s)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > customRules-pre-imported (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 1 file(s)",
    "Summary: 6 error(s)"
  ],
  "stderr": [
    "viewme.md:3 error any-blockquote Rule that reports an error for any blockquote [Blockquote spans 1 line(s).] [Context: \\"> Tagli\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > extends-markdownlint-cli2-yaml (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: file.md",
    "Linting: 1 file(s)",
    "Summary: 1 error(s)"
  ],
  "stderr": [
    "file.md:1:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Heading\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > fix (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 4 file(s)",
    "Summary: 7 error(s)"
  ],
  "stderr": [
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir2/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir2/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir2/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir2/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir2/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:5 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > fix-and-config-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 1 error(s)"
  ],
  "stderr": [
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > formatter-pretty-appendLink (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 15 error(s)"
  ],
  "stderr": [
    "\\u001b[35mdir/about.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m1\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m3\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD021/no-multiple-space-closed-atx\\u001b[39m Multiple spaces inside hashes on closed atx style heading\\u001b[33m [Context: \\"#  About  #\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md021.md\\u001b[39m",
    "\\u001b[35mdir/about.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m1\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m10\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD021/no-multiple-space-closed-atx\\u001b[39m Multiple spaces inside hashes on closed atx style heading\\u001b[33m [Context: \\"#  About  #\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md021.md\\u001b[39m",
    "\\u001b[35mdir/about.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m4\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD032/blanks-around-lists\\u001b[39m Lists should be surrounded by blank lines\\u001b[33m [Context: \\"1. List\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md032.md\\u001b[39m",
    "\\u001b[35mdir/about.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m5\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m1\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD029/ol-prefix\\u001b[39m Ordered list item prefix\\u001b[33m [Expected: 2; Actual: 3; Style: 1/2/3]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md029.md\\u001b[39m",
    "\\u001b[35mdir/subdir/info.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m1\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD022/blanks-around-headings\\u001b[39m Headings should be surrounded by blank lines\\u001b[33m [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md022.md\\u001b[39m",
    "\\u001b[35mdir/subdir/info.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m1\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD041/first-line-heading/first-line-h1\\u001b[39m First line in a file should be a top-level heading\\u001b[33m [Context: \\"## Information\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md041.md\\u001b[39m",
    "\\u001b[35mdir/subdir/info.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m2\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m7\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD038/no-space-in-code\\u001b[39m Spaces inside code span elements\\u001b[33m [Context: \\"\` code1\`\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md038.md\\u001b[39m",
    "\\u001b[35mdir/subdir/info.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m2\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m26\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD038/no-space-in-code\\u001b[39m Spaces inside code span elements\\u001b[33m [Context: \\"\`code2 \`\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md038.md\\u001b[39m",
    "\\u001b[35mdir/subdir/info.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m4\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD012/no-multiple-blanks\\u001b[39m Multiple consecutive blank lines\\u001b[33m [Expected: 1; Actual: 2]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md\\u001b[39m",
    "\\u001b[35mviewme.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m1\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m9\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mextended-ascii\\u001b[39m Only extended ASCII characters are allowed\\u001b[33m [Blocked character: '✅']\\u001b[39m",
    "\\u001b[35mviewme.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m3\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m10\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD009/no-trailing-spaces\\u001b[39m Trailing spaces\\u001b[33m [Expected: 0 or 2; Actual: 1]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md009.md\\u001b[39m",
    "\\u001b[35mviewme.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m5\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD012/no-multiple-blanks\\u001b[39m Multiple consecutive blank lines\\u001b[33m [Expected: 1; Actual: 2]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md\\u001b[39m",
    "\\u001b[35mviewme.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m6\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD025/single-title/single-h1\\u001b[39m Multiple top-level headings in the same document\\u001b[33m [Context: \\"Description\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md025.md\\u001b[39m",
    "\\u001b[35mviewme.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m12\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m4\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD019/no-multiple-space-atx\\u001b[39m Multiple spaces after hash on atx style heading\\u001b[33m [Context: \\"##  Summary\\"]\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md019.md\\u001b[39m",
    "\\u001b[35mviewme.md\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m14\\u001b[39m\\u001b[36m:\\u001b[39m\\u001b[32m14\\u001b[39m \\u001b[90merror\\u001b[39m \\u001b[33mMD047/single-trailing-newline\\u001b[39m Files should end with a single newline character\\u001b[33m\\u001b[39m\\u001b[94m https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md047.md\\u001b[39m"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownItPlugins-missing (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: .*"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cjs-invalid (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-cjs-invalid (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-extends (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 4 file(s)",
    "Summary: 8 error(s)"
  ],
  "stderr": [
    "cjs/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "cjs/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "jsonc/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "jsonc/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "package/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "package/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "yaml/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "yaml/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-yaml (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 10 error(s)"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-yaml-example (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [],
  "stderr": [
    "extended-ascii.md:1:9 error extended-ascii Only extended ASCII characters are allowed [Blocked character: '✅']",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-yaml-mismatch (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md",
    "Linting: 1 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-json-extends (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-json-invalid (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-json-null (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 1 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-mjs (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-yaml-mismatch (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md",
    "Linting: 1 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > nested-directories (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: ** !a a/b !a/b/c a/b/c/d",
    "Linting: 3 file(s)",
    "Summary: 15 error(s)"
  ],
  "stderr": [
    "a/b/c/d/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "a/b/c/d/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "a/b/c/d/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "a/b/c/d/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "a/b/c/d/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "a/b/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "a/b/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "a/b/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "a/b/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "a/b/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > nested-files (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 2 file(s)",
    "Summary: 8 error(s)"
  ],
  "stderr": [
    "markdownlint-cli2-jsonc/dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "markdownlint-cli2-jsonc/dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "markdownlint-cli2-jsonc/dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "markdownlint-cli2-jsonc/dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "markdownlint-json/dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "markdownlint-json/dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "markdownlint-json/dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "markdownlint-json/dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-config (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **",
    "Linting: 4 file(s)",
    "Summary: 19 error(s)"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:4 error MD032/blanks-around-lists Lists should be surrounded by blank lines [Context: \\"1. List\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir/UPPER.MD:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir/UPPER.MD:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir/UPPER.MD:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir/UPPER.MD:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir/UPPER.MD:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-config-ignore-only-other (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: !dir",
    "Linting: 0 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-config-ignore-other (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: *.md !dir",
    "Linting: 1 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-files-exclamation (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: !",
    "Linting: 0 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > one-argument-config-arg (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "https://github.com/DavidAnson/markdownlint-cli2",
    "",
    "Syntax: markdownlint-cli2 glob0 [glob1] [...] [globN] [--config file] [--configPointer pointer] [--fix] [--format] [--help] [--no-globs]",
    "",
    "Glob expressions (from the globby library):",
    "- * matches any number of characters, but not /",
    "- ? matches a single character, but not /",
    "- ** matches any number of characters, including /",
    "- {} allows for a comma-separated list of \\"or\\" expressions",
    "- ! or # at the beginning of a pattern negate the match",
    "- : at the beginning identifies a literal file path",
    "- - as a glob represents standard input (stdin)",
    "",
    "Dot-only glob:",
    "- The command \\"markdownlint-cli2 .\\" would lint every file in the current directory tree which is probably not intended",
    "- Instead, it is mapped to \\"markdownlint-cli2 *.{md,markdown}\\" which lints all Markdown files in the current directory",
    "- To lint every file in the current directory tree, the command \\"markdownlint-cli2 **\\" can be used instead",
    "",
    "Optional parameters:",
    "- --config        specifies the path to a configuration file to define the base configuration",
    "- --configPointer specifies a JSON Pointer to a configuration object within the --config file",
    "- --fix           updates files to resolve fixable issues (can be overridden in configuration)",
    "- --format        reads standard input (stdin), applies fixes, writes standard output (stdout)",
    "- --help          writes this message to the console and exits without doing anything else",
    "- --no-globs      ignores the \\"globs\\" property if present in the top-level options object",
    "",
    "Configuration via:",
    "- .markdownlint-cli2.jsonc",
    "- .markdownlint-cli2.yaml",
    "- .markdownlint-cli2.cjs or .markdownlint-cli2.mjs",
    "- .markdownlint.jsonc or .markdownlint.json",
    "- .markdownlint.yaml or .markdownlint.yml",
    "- .markdownlint.cjs or .markdownlint.mjs",
    "",
    "Cross-platform compatibility:",
    "- UNIX and Windows shells expand globs according to different rules; quoting arguments is recommended",
    "- Some Windows shells don't handle single-quoted (') arguments well; double-quote (\\") is recommended",
    "- Shells that expand globs do not support negated patterns (!node_modules); quoting is required here",
    "- Some UNIX shells parse exclamation (!) in double-quotes; hashtag (#) is recommended in these cases",
    "- The path separator is forward slash (/) on all platforms; backslash (\\\\) is automatically converted",
    "- On any platform, passing the parameter \\"--\\" causes all remaining parameters to be treated literally",
    "",
    "The most compatible syntax for cross-platform support:",
    "$ markdownlint-cli2 \\"**/*.md\\" \\"#node_modules\\""
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > overrides-scenarios (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 33 file(s)",
    "Summary: 54 error(s)"
  ],
  "stderr": [
    "all-overridden/copy.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "all-overridden/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "bare/file.md:1:11 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "bare/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "bare/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "empty-base/file.md:1:11 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "empty-base/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "empty-config/copy.md:1:11 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "empty-config/copy.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "empty-config/copy.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "empty-config/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "empty-config/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "empty-overrides/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "empty-overrides/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "globs/copy.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "globs/duplicate.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "globs/duplicate.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "globs/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "missing-base/file.md:1:11 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "missing-base/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "multiple/copy.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "multiple/duplicate.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "multiple/duplicate.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "multiple/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "negated/copy.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "negated/copy.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "negated/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "nested/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "nested/nested/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "nested/nested/subdir/file.md:1:11 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "nested/nested/subdir/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "nested/normal/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "nested/normal/subdir/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "no-combine/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "no-combine/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "no-config/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "no-config/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "no-filter/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "no-filter/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "none-matching/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "none-matching/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "normal/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "normal/file.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "overlapping/copy.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "overlapping/copy.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "overlapping/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "replace/copy.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "replace/duplicate.md:1:11 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "replace/duplicate.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "replace/file.md:1:11 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "replace/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "single/copy.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]",
    "single/copy.md:1:11 error MD047/single-trailing-newline Files should end with a single newline character",
    "single/file.md:1:3 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"#  Heading\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > package-json (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 10 error(s)"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > tilde-paths-module (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: *.md",
    "Linting: 3 file(s)",
    "Summary: 10 error(s)"
  ],
  "stderr": [
    "hr.md 3 sample-rule-commonjs",
    "link.md 3 MD039/no-space-in-links",
    "link.md 3 MD039/no-space-in-links",
    "link.md 3 MD059/descriptive-link-text",
    "viewme.md 3 any-blockquote",
    "viewme.md 3 MD009/no-trailing-spaces",
    "viewme.md 5 MD012/no-multiple-blanks",
    "viewme.md 6 MD025/single-title/single-h1",
    "viewme.md 12 MD019/no-multiple-space-atx",
    "viewme.md 14 MD047/single-trailing-newline",
    "cjs: hr.md 3 sample-rule-commonjs",
    "cjs: link.md 3 MD039/no-space-in-links",
    "cjs: link.md 3 MD039/no-space-in-links",
    "cjs: link.md 3 MD059/descriptive-link-text",
    "cjs: viewme.md 3 any-blockquote",
    "cjs: viewme.md 3 MD009/no-trailing-spaces",
    "cjs: viewme.md 5 MD012/no-multiple-blanks",
    "cjs: viewme.md 6 MD025/single-title/single-h1",
    "cjs: viewme.md 12 MD019/no-multiple-space-atx",
    "cjs: viewme.md 14 MD047/single-trailing-newline"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;
